avoid overflow of mobile showcase image
- in benefits section

--- a/main.scss
+++ b/main.scss
@@ -235,6 +235,7 @@ footer {
     // ### benefits section
     .benefits img.mobile-showcase {
         width: unset;
+        width: 90%;
         max-width: 900px;
         margin: 4em auto -1.6em auto;
     }
